FIX: Left-align allomorphs table

--- a/pages/Component/Component.css
+++ b/pages/Component/Component.css
@@ -17,6 +17,10 @@
   width:         100%;
 }
 
+.allomorphs {
+  align-items: flex-start;
+}
+
 article {
   flex-direction:  row;
   flex-wrap:       wrap;
